[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = 'retrieval-log-audit'
version = "0.1.0"
description = 'Find retrieval logs with empty hits, weak scores, and missing source metadata.'
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mertefe Kurt" }]
keywords = ["automation", "developer-tools", "ai-engineering", "cli"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
retrieval-log-audit = "retrieval_log_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "RUF"]
